RESOLVED FIXED197401
Transform is sometimes left in a bad state after an animation
https://bugs.webkit.org/show_bug.cgi?id=197401
Summary Transform is sometimes left in a bad state after an animation
Simon Fraser (smfr)
Reported 2019-04-29 19:42:17 PDT
Transform is sometimes left in a bad state after an animation
Attachments
Patch (18.83 KB, patch)
2019-04-29 19:49 PDT, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews102 for mac-highsierra (3.22 MB, application/zip)
2019-04-29 20:46 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.62 MB, application/zip)
2019-04-29 22:50 PDT, EWS Watchlist
no flags
Patch (71.41 KB, patch)
2019-04-30 10:14 PDT, Simon Fraser (smfr)
dino: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.66 MB, application/zip)
2019-04-30 12:02 PDT, EWS Watchlist
no flags
Simon Fraser (smfr)
Comment 1 2019-04-29 19:49:37 PDT
Simon Fraser (smfr)
Comment 2 2019-04-29 19:50:07 PDT
EWS Watchlist
Comment 3 2019-04-29 20:46:33 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 4 2019-04-29 20:46:35 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 5 2019-04-29 22:50:19 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 6 2019-04-29 22:50:20 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 7 2019-04-30 08:12:41 PDT
*** Bug 197400 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 8 2019-04-30 10:14:54 PDT
EWS Watchlist
Comment 9 2019-04-30 12:02:44 PDT
Comment on attachment 368575 [details] Patch Attachment 368575 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/12042426 New failing tests: legacy-animation-engine/compositing/layer-creation/scale-rotation-animation-overlap.html
EWS Watchlist
Comment 10 2019-04-30 12:02:45 PDT
Created attachment 368583 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.14.4
Simon Fraser (smfr)
Comment 11 2019-04-30 13:21:17 PDT
Note You need to log in before you can comment on or make changes to this bug.