Transform is sometimes left in a bad state after an animation https://bugs.webkit.org/show_bug.cgi?id=197401 rdar://problem/48179186

Reviewed by Dean Jackson.

Source/WebCore:

In some more complex compositing scenarios, at the end of an animation we'd
fail to push a new transform onto a layer, because updateGeometry() would
think there's an animation running (which there is, but in the "Ending" state).

It's simpler in this code to just always push transform and opacity to the layer;
they will get overridden by the animation while it's running. The current code
dates from the first landing of the file, and the reason for the if (!isRunningAcceleratedTransformAnimation)
check is lost in the sands of time.

I was not able to get a reliable ref or layer tree test for this, because the next compositing update
fixes it, and WTR seems to trigger one.  But the added test does show the bug
in Safari, and is a good test to have.

Test: compositing/animation/transform-after-animation.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):

LayoutTests:

Share code between all the overlap tests that work by creating dot matrices, and strip
out the transforms from the layer tree dumps, because they can vary with timing in these
tests.

* compositing/animation/transform-after-animation-expected.html: Added.
* compositing/animation/transform-after-animation.html: Added.
* compositing/backing/backing-store-attachment-empty-keyframe-expected.txt:
* compositing/layer-creation/animation-overlap-with-children.html:
* compositing/layer-creation/mismatched-rotated-transform-animation-overlap-expected.txt:
* compositing/layer-creation/mismatched-rotated-transform-animation-overlap.html:
* compositing/layer-creation/mismatched-rotated-transform-transition-overlap.html:
* compositing/layer-creation/mismatched-transform-transition-overlap.html:
* compositing/layer-creation/multiple-keyframes-animation-overlap-expected.txt:
* compositing/layer-creation/multiple-keyframes-animation-overlap.html:
* compositing/layer-creation/resources/compositing-overlap-utils.js: Added.
(makeDots):
(layerTreeWithoutTransforms):
(dumpLayers):
* compositing/layer-creation/scale-rotation-animation-overlap-expected.txt:
* compositing/layer-creation/scale-rotation-animation-overlap.html:
* compositing/layer-creation/scale-rotation-transition-overlap.html:
* compositing/layer-creation/translate-animation-overlap-expected.txt:
* compositing/layer-creation/translate-animation-overlap.html:
* compositing/layer-creation/translate-scale-animation-overlap-expected.txt:
* compositing/layer-creation/translate-scale-animation-overlap.html:
* compositing/layer-creation/translate-scale-transition-overlap.html:
* compositing/layer-creation/translate-transition-overlap.html:
* legacy-animation-engine/compositing/backing/backing-store-attachment-empty-keyframe-expected.txt:
* legacy-animation-engine/compositing/backing/backing-store-attachment-empty-keyframe.html:
* legacy-animation-engine/compositing/backing/transform-transition-from-outside-view-expected.txt:
* legacy-animation-engine/compositing/layer-creation/animation-overlap-with-children.html:
* legacy-animation-engine/compositing/layer-creation/mismatched-rotated-transform-animation-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/mismatched-rotated-transform-animation-overlap.html:
* legacy-animation-engine/compositing/layer-creation/mismatched-rotated-transform-transition-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/mismatched-rotated-transform-transition-overlap.html:
* legacy-animation-engine/compositing/layer-creation/mismatched-transform-transition-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/mismatched-transform-transition-overlap.html:
* legacy-animation-engine/compositing/layer-creation/multiple-keyframes-animation-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/multiple-keyframes-animation-overlap.html:
* legacy-animation-engine/compositing/layer-creation/scale-rotation-animation-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/scale-rotation-animation-overlap.html:
* legacy-animation-engine/compositing/layer-creation/scale-rotation-transition-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/scale-rotation-transition-overlap.html:
* legacy-animation-engine/compositing/layer-creation/translate-animation-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/translate-animation-overlap.html:
* legacy-animation-engine/compositing/layer-creation/translate-scale-animation-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/translate-scale-animation-overlap.html:
* legacy-animation-engine/compositing/layer-creation/translate-scale-transition-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/translate-scale-transition-overlap.html:
* legacy-animation-engine/compositing/layer-creation/translate-transition-overlap-expected.txt:
* legacy-animation-engine/compositing/layer-creation/translate-transition-overlap.html:
* platform/ios/compositing/layer-creation/scale-rotation-animation-overlap-expected.txt:

Canonical link: https://commits.webkit.org/211618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244800 268f45cc-cd09-0410-ab3c-d52691b4dbfc